--- a/app/src/main/res/layout/activity_location_share.xml
+++ b/app/src/main/res/layout/activity_location_share.xml
@@ -13,11 +13,11 @@
         android:background="#FFFFFF">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_chat_list"
+            android:id="@+id/toolbar_location"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#FFFFFF"
-            android:elevation="4dp"
+            android:elevation="0dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
@@ -40,7 +40,6 @@
                     android:layout_height="24dp"
                     android:src="@drawable/bell"
                     android:layout_marginEnd="16dp"/>
-
                 <ImageView
                     android:id="@+id/btn_menu"
                     android:layout_width="24dp"
@@ -51,13 +50,60 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_map_container"
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="8dp"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_location"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/map_fragment_location"
+                android:name="com.naver.maps.map.MapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_location_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:checked="true"
+            app:thumbTint="#FFFFFF"
+            app:trackTint="#4CAF50"
+            app:layout_constraintTop_toBottomOf="@id/card_map_container"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_share_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="위치 공유"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@id/switch_location_share"
+            app:layout_constraintTop_toTopOf="@id/switch_location_share"
+            app:layout_constraintBottom_toBottomOf="@id/switch_location_share"/>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_chat_list_container"
+            android:id="@+id/rv_location_users"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_chat_list"
+            android:layout_marginTop="16dp"
+            android:paddingHorizontal="24dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_share_label"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/item_chat_list_row"/>
+            tools:listitem="@layout/location_user"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
