--- a/app/src/main/res/layout/activity_route_main.xml
+++ b/app/src/main/res/layout/activity_route_main.xml
@@ -1,158 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_route_main"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#FFFFFF"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" /> </androidx.appcompat.widget.Toolbar>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_route_main"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#FFFFFF"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/map_fragment_main"
-        android:name="com.naver.maps.map.MapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_route_main"
-        app:layout_constraintBottom_toTopOf="@id/card_route_info" />
+            <ImageView
+                android:id="@+id/btn_home_logo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/logo"
+                android:layout_gravity="start"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_route_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="16dp"
-        app:cardCornerRadius="16dp"
-        android:layout_marginBottom="-16dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <LinearLayout
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/btn_notification"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/bell"
+                    android:layout_marginEnd="16dp"/>
+
+                <ImageView
+                    android:id="@+id/btn_menu"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/menu"
+                    android:layout_marginEnd="16dp"/>
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/map_fragment_main"
+            android:name="com.naver.maps.map.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_route_main"
+            app:layout_constraintBottom_toTopOf="@id/card_route_info" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_route_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="24dp">
-
-            <TextView
-                android:id="@+id/tv_route_start"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="출발지 - 고척스카이돔"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:layout_marginBottom="8dp"/>
-
-            <TextView
-                android:id="@+id/tv_route_end"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="도착지 - 서울 구로구 안양천로 537다길"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:layout_marginBottom="24dp"/>
-
-            <TextView
-                android:id="@+id/btn_route_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="고척스카이돔 ➔ 안양천로 537다길"
-                android:gravity="center"
-                android:padding="12dp"
-                android:textStyle="bold"
-                android:background="#FFE4E1"
-                android:textColor="#000000"
-                android:layout_marginBottom="24dp"/>
+            app:cardElevation="16dp"
+            app:cardCornerRadius="16dp"
+            android:layout_marginBottom="-16dp"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:padding="24dp">
+
+                <TextView
+                    android:id="@+id/tv_route_start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="출발지 - 고척스카이돔"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:id="@+id/tv_route_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="도착지 - 서울 구로구 안양천로 537다길"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="24dp"/>
+
+                <TextView
+                    android:id="@+id/btn_route_summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="고척스카이돔 ➔ 안양천로 537다길"
+                    android:gravity="center"
+                    android:padding="12dp"
+                    android:textStyle="bold"
+                    android:background="#FFE4E1"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="24dp"/>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <TextView
-                        android:text="도보"
-                        android:background="#F08080"
-                        android:textColor="#FFFFFF"
-                        android:paddingHorizontal="16dp"
-                        android:paddingVertical="6dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"/>
-                    <TextView
-                        android:id="@+id/tv_time_walk"
-                        android:text="10분"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
+                    android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <TextView
-                        android:text="버스/지하철"
-                        android:background="#F08080"
-                        android:textColor="#FFFFFF"
-                        android:paddingHorizontal="16dp"
-                        android:paddingVertical="6dp"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"/>
-                    <TextView
-                        android:id="@+id/tv_time_transit"
-                        android:text="x"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+                        <TextView
+                            android:text="도보"
+                            android:background="#F08080"
+                            android:textColor="#FFFFFF"
+                            android:paddingHorizontal="16dp"
+                            android:paddingVertical="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"/>
+                        <TextView
+                            android:id="@+id/tv_time_walk"
+                            android:text="10분"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/layout_btn_taxi"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:clickable="true"
-                    android:focusable="true">
-                    <TextView
-                        android:text="택시"
-                        android:background="#F08080"
-                        android:textColor="#FFFFFF"
-                        android:paddingHorizontal="16dp"
-                        android:paddingVertical="6dp"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"/>
-                    <TextView
-                        android:id="@+id/tv_time_taxi"
-                        android:text="9분"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+                        <TextView
+                            android:text="버스/지하철"
+                            android:background="#F08080"
+                            android:textColor="#FFFFFF"
+                            android:paddingHorizontal="16dp"
+                            android:paddingVertical="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"/>
+                        <TextView
+                            android:id="@+id/tv_time_transit"
+                            android:text="x"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/layout_btn_taxi"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:clickable="true"
+                        android:focusable="true">
+                        <TextView
+                            android:text="택시"
+                            android:background="#F08080"
+                            android:textColor="#FFFFFF"
+                            android:paddingHorizontal="16dp"
+                            android:paddingVertical="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"/>
+                        <TextView
+                            android:id="@+id/tv_time_taxi"
+                            android:text="9분"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:background="#FFFFFF"
+        app:headerLayout="@layout/nav_header" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
